--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,5 @@
 name: "Release Pipeline"
-on:
-  push:
-    tags:
-      - v*
+on: push
 jobs:
   release:
     if: github.repository == 'WebGoat/WebGoat'
